Fix(#4195): Ensure visibility of notifications buttons on small screens

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -197,6 +197,12 @@
   .navbar-search-icon-onexpand {
     display: none;
   }
+
+  .dropdown:nth-child(2n) {
+    align-items: flex-end;
+    position: absolute;
+    right: 20px;
+  }
 }
 
 @media (max-width: 768px) {
